create code to print players above the grid

--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -35,7 +35,21 @@ th, td {
     height: 3rem;
     text-align: center;
 }
-.colorCell {
-    background-color: darkgoldenrod;
+
+h1, h2 {
+    margin-bottom: 0;
+    margin-top: 0;
 }
+
+p {
+    display: inline-block;
+    margin-bottom: 0;
+    margin-top: 0;
+    font-weight: normal;
+}
+
+.vs {
+    font-size: 3rem;
+}
+
 
