--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -4,15 +4,16 @@
 }
 
 /*Estilo grid*/
+
 table {
-    width: 35rem;
-    height: 35rem;
     border: solid 0.2rem gray;
     border-collapse: collapse;
+
 }
 
 thead tr {
     border-bottom: solid 0.2rem gray;
+
 
 }
 thead th {
@@ -20,7 +21,8 @@ thead th {
 }
 
 td {
-     border-bottom: solid 0.1rem lightgray;
+    border-bottom: solid 0.1rem lightgray;
+    border-radius: 10px;
 }
 
 .letters {
@@ -31,14 +33,19 @@ td {
 }
 
 th, td {
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 1.8rem;
     text-align: center;
 }
 
-h1, h2 {
+h1 {
+    margin-bottom: 0;
+    margin-top: 2rem;
+}
+h2 {
     margin-bottom: 0;
     margin-top: 0;
+    margin-bottom: 2rem;
 }
 
 p {
@@ -46,6 +53,12 @@ p {
     margin-bottom: 0;
     margin-top: 0;
     font-weight: normal;
+    color: grey;
+}
+
+#userViewer {
+    color: palegreen;
+    font-weight: bold;
 }
 
 .vs {
