--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -18,6 +18,7 @@ thead tr {
 }
 thead th {
     border-left: solid 0.1rem lightgray;
+    font-size: 1.5rem;
 }
 
 td {
@@ -27,20 +28,23 @@ td {
 
 .letters {
     border-right: solid 0.2rem gray;
+    font-size: 1.5rem;
+    font-weight: bold;
 }
 .column {
     border-right: solid 0.1rem lightgray;
 }
 
 th, td {
-    width: 2rem;
-    height: 1.8rem;
+    width: 3rem;
+    height: 2.8rem;
     text-align: center;
 }
 
 h1 {
     margin-bottom: 0;
     margin-top: 2rem;
+    font-size: 3rem;
 }
 h2 {
     margin-bottom: 0;
@@ -64,5 +68,17 @@ p {
 .vs {
     font-size: 3rem;
 }
+
+#salvosTable {
+    margin-left: 3rem;
+}
+.tables {
+    display: flex;
+}
+h3 {
+    text-align: center;
+}
+
+
 
 
