--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -118,6 +118,77 @@ h3 {
     display: none;
 }
 
+/*Estilo drag and drop*/
+
+#battleship {
+    width: 12rem;
+    height: 2.8rem;
+    background-color: grey;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+#destroyer {
+    width: 9rem;
+    height: 2.8rem;
+    background-color: darkgoldenrod;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+#submarine {
+    width: 9rem;
+    height: 2.8rem;
+    background-color: coral;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+[draggable] {
+    user-select: none;
+}
+
+#battleship:hover, #destroyer:hover, #submarine:hover {
+    border: none;
+    border-radius: 10px;
+    box-shadow: inset 0 0 3px #000;
+    opacity: 0.4;
+    cursor: move;
+}
+
+#ships {
+    margin-left: 25px;
+    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+}
+
+.battleship {
+    margin-top: 50px;
+}
+
+.destroyer, .submarine {
+    margin-top: 50px;
+}
+
+.verticalBattleship {
+    transform: rotate(90deg);
+    margin-bottom: 50px;
+    margin-top: 100px;
+}
+
+.verticalDestroyer, .verticalSubmarine {
+    transform: rotate(90deg);
+    margin-bottom: 25px;
+    margin-top: 75px;
+
+}
+
+
+
+
+
+
 
 
 
