--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -74,6 +74,7 @@ p {
 }
 .tables {
     display: flex;
+    flex-wrap: wrap;
 }
 h3 {
     text-align: center;
@@ -215,6 +216,10 @@ h3 {
 .table3 {
     margin-bottom: 25px;
 
+}
+
+.gameOver {
+    display: none;
 }
 
 
