create code to status behaivor

--- a/src/main/resources/static/web/styles/gameStyle.css
+++ b/src/main/resources/static/web/styles/gameStyle.css
@@ -1,6 +1,69 @@
 
+#containerGames{
+    width: 95%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+#container {
+    width: 95%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+
+h1 {
+    margin-bottom: 25px;
+    font-size: 7rem;
+    color:  #395870;
+}
+
+#gameTitle {
+    margin-top: 0px;
+    font-size: 5rem;
+}
+
+button {
+    border-radius: 5px;
+}
+
+label {
+    margin-right: 15px;
+}
+
+#signin {
+    margin-left: 15px;
+}
+
+#tablesHome {
+    display: flex;
+    margin-top: 25px;
+    border-top: 2px solid grey;
+
+}
+
+.tablesHome2 {
+    margin-top: 25px;
+}
+
 .listStyle1 {
     list-style: lower-roman;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: inline-block;
 }
 
 /*Estilo grid*/
@@ -14,11 +77,10 @@ table {
 thead tr {
     border-bottom: solid 0.2rem gray;
 
-
 }
 thead th {
     border-left: solid 0.1rem lightgray;
-    font-size: 1.5rem;
+    font-size: 1.0rem;
 }
 
 td {
@@ -36,16 +98,11 @@ td {
 }
 
 th, td {
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
     text-align: center;
 }
 
-h1 {
-    margin-bottom: 0;
-    margin-top: 2rem;
-    font-size: 3rem;
-}
 h2 {
     margin-bottom: 0;
     margin-top: 0;
@@ -61,10 +118,13 @@ p {
 }
 
 #userPlayer {
-    color: palegreen;
+    color:  #395870;
     font-weight: bold;
 }
 
+#userPlayer, #userOpponent {
+    font-size: 2rem;
+}
 .vs {
     font-size: 3rem;
 }
@@ -75,87 +135,121 @@ p {
 .tables {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+
 }
+
+.tablesButtons {
+    display: flex;
+    justify-content: flex-end;
+    width: 72%;
+}
+
 h3 {
     text-align: center;
 }
-/*.cellWithShip {*/
-    /*background-color: palegreen;*/
-/*}*/
 
 /* estilo tabla leaderBoard*/
 
-#leaderBoard th {
+#leaderBoard th, #tableGames th {
     width: 5rem;
     border-left: 0;
     border-right: 0;
 }
-#tableLeader td {
+#tableLeader td, #tableGames td {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     border-radius: 0;
+
 }
-#leaderBoard thead {
+
+#leaderBoard thead, #tableGames thead {
     background-color:  #395870;
     color: white;
     border-color:  #395870;
 
 }
-#leaderBoard thead tr {
+#leaderBoard thead tr, #tableGames thead tr {
     border-bottom-color: #395870;
 }
 
-#leaderBoard {
+#leaderBoard, #tableGames {
     border-color:  #395870;
+    width: 90%;
 
 }
-#tableLeader tr:nth-child(even) {
+#tableLeader tr:nth-child(even), #tableGames tr:nth-child(even){
     background: #f0f0f2;
+}
+
+/*Estilo tabla Games*/
+
+.btnGo {
+
+    width: 50px;
+    height: 30px;
 }
 
 /* Estilo login */
 
-#currentUser{
-    display: none;
+#login {
+    background-color: rgb(88, 214, 141);
+    font-weight: bold;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
+#currentUser{
+    display: none;
+    font-size: 2rem;
+    margin-right: 15px;
+}
+
+#logout {
+    margin-left: 10rem;
+    background-color: rgb(231, 76, 60);
+    font-weight: bold;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
 /*Estilo drag and drop*/
 
 #aircraft {
-    width: 15rem;
-    height: 3rem;
+    width: 12.5rem;
+    height: 2.5rem;
     background-color: forestgreen;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 #battleship {
-    width: 12rem;
-    height: 3rem;
+    width: 10rem;
+    height: 2.5rem;
     background-color: grey;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 #destroyer {
-    width: 9rem;
-    height: 3rem;
+    width: 7.5rem;
+    height: 2.5rem;
     background-color: darkgoldenrod;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 #submarine {
-    width: 9rem;
-    height: 3rem;
+    width: 7.5rem;
+    height: 2.5rem;
     background-color: coral;
     border: 2px solid black;
     border-radius: 10px;
 }
 
 #patrolboat {
-    width: 6rem;
-    height: 3rem;
+    width: 5rem;
+    height: 2.5rem;
     background-color: crimson;
     border: 2px solid black;
     border-radius: 10px;
@@ -215,12 +309,40 @@ h3 {
 
 .table3 {
     margin-bottom: 25px;
+}
+
+#state {
+    font-size: 1.5rem;
+    color: grey;
+    margin-bottom: 25px;
 
 }
 
 .gameOver {
     display: none;
 }
+
+#createShips, #createSalvo {
+    width: 100px;
+    height: 40px;
+    font-weight: bold;
+}
+
+#createShips:hover, #createSalvo:hover {
+    opacity: 0.4;
+}
+
+.winLose {
+
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: black;
+
+}
+
+
+
+
 
 
 
